--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,6 @@
-body{
-    Background: grey;
-
-}
-
 .jumbotron{
-    background:brown !important;
+    background:grey !important;
     color: white;
     text-align: center;
-    padding-top: 10px;
+    padding-top: 20px;
 }
